# flex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: test.hpp
lib/include/flex/: allocator.hpp  basicTypes.hpp  bitfield.hpp  config.hpp  contiguousIterator.hpp  contiguousIterator.inl  continousIterator.hpp  errorCode.hpp  errorType.hpp  iterator.hpp  iterator.inl  logger.hpp  number.hpp  operatorTraits.hpp  reference.hpp  test.hpp  typeSets.hpp  typeTraits.hpp
lib/include/flex/macros/: foreach.hpp  macros.hpp
lib/include/flex/memory/: allocator.hpp  poolAllocator.hpp  poolAllocator.inl  stackAllocator.hpp  stackAllocator.inl
lib/include/flex/pipes/: andThen.hpp  conversion.hpp  hasValue.hpp  optional.hpp  pipes.hpp  toNumber.hpp  toString.hpp  transform.hpp  valueOr.hpp
lib/include/flex/reflection/: aggregate.hpp  aggregateMembersCount.hpp  autoAggregateSize.hpp  autoDetect.hpp  enums.hpp  enums.inl  metadata.hpp  reflection.hpp
lib/src/: logger.cpp
scripts/: aggregate_members_tuple.py  macros_var_to_seq.py
tests/: CMakeLists.txt
tests/src/: allocator.cpp  enums.cpp  iterator.cpp  macros.cpp  optional.cpp  reflection.cpp  test.cpp
